[package]
name = "caverns-of-titan"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
mlua = { version = "0.10.3", features = ["lua54", "vendored"] }

# no optimizing, all debug symbols, quick compiling
[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
debug-assertions = true
incremental = true
panic = "unwind"

# edited opt-level for speed rather than size since we're no longer web-building
[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"
debug = false
